[package]
name = "star"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = "4.4.11"
dialoguer = "0.11.0"
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
rayon = "1.8.0"
rust-lzma = "0.6.0"
tar = "0.4.40"
tokio = "1.35.1"
